# max-kcut

./: .clang-format  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
git-hooks/: commit-msg  post-commit  pre-commit
src/: BruteForce.cpp  BruteForce.h  GAIndividual.cpp  GAIndividual.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Graph.cpp  Graph.h  Greedy.cpp  Greedy.h  Individual.cpp  Individual.h  SimmulatedAnnealing.cpp  SimmulatedAnnealing.h  main.cpp
static_analysis/: clang_tidy_before.txt  cppcheck-report_after.xml  cppcheck-report_before.xml
testgen/: CMakeLists.txt  main.cpp
tests/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  28.in  3.in  32.in  4.in  5.in  6.in  7.in  8.in  9.in  results.csv  results_1.csv
